use chrome app system.network to discover network capcabilities

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -5,8 +5,14 @@
   "manifest_version": 2,
   "permissions": [
     "storage",
-    "identity"
+    "identity",
+    "system.network"
   ],
+  "sockets": {
+    "tcp": {
+      "connect": "*"
+    }
+  },
   "app": {
     "background": {
       "scripts": ["background.js"]
